2006-10-11  Benjamin Kosnik  <bkoz@redhat.com>

PR libstdc++/29426
	* libsupc++/guard.cc (get_static_mutex): New. 
	(mutex_wrapper::mutex_wrapper): Use it to get properly initialized
	recursive mutex without ordering issues.

	* src/locale_init.cc (__get_locale_mutex): No need to
	uglify. Change to get_locale_mutex.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117643 138bc75d-0d04-0410-961f-82ee72b054a4